--- a/package.json
+++ b/package.json
@@ -3,19 +3,29 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.6.0",
+    "@fortawesome/free-brands-svg-icons": "^6.6.0",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@windmill/react-ui": "^0.6.0",
+    "aos": "^2.3.4",
     "axios": "^1.7.4",
+    "bootstrap": "^5.3.3",
     "chart.js": "^4.4.3",
     "classnames": "^2.5.1",
+    "emailjs-com": "^3.2.0",
+    "jquery": "^3.7.1",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.4",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.0",
     "react-scripts": "5.0.1",
+    "smooth-scroll": "^16.1.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -44,5 +54,9 @@
   },
   "devDependencies": {
     "tailwindcss": "^3.4.10"
+  },
+  "globals": {
+    "$": "readonly",
+    "AOS": "readonly"
   }
 }
